# ibus-hangul

./: .gitignore  AUTHORS  Makefile.am  README  autogen.sh  configure.ac  ibus-hangul.spec.in
data/: Makefile.am
engine/: Makefile.am  engine.py  factory.py  hangul.engine.in  hangul.i  ibus-engine-hangul.in  test.py
icons/: Makefile.am
po/: LINGUAS  POTFILES.in  ko.po  zh_CN.po
setup/: Makefile.am  config.py.in  ibus-setup-hangul.in  keycapturedialog.py  main.py  setup.glade  setup.ui
src/: Makefile.am  engine.c  engine.h  hangul.xml.in  hangul.xml.in.in  i18n.h  main.c  ustring.c  ustring.h
